# rogue2

./: .gitignore  CLAUDE.md  README.md  start-dev.sh  stop-dev.sh
docs/: PROCEDURAL_GENERATION.md
prompts/: setup.md
rust/: .gitignore  Cargo.toml  Dockerfile
rust/data/maps/: overworld_01.json
rust/src/: config.rs  lib.rs  main.rs
rust/src/ai/: hostile.rs  mod.rs
rust/src/ecs/: components.rs  systems.rs
rust/src/game/: abilities.rs  accessories.rs  ai.rs  armor.rs  character.rs  combat.rs  equipment.rs  loop.rs  loot.rs  mod.rs  monsters.rs  progression.rs  spawning.rs  state.rs  sync.rs  weapons.rs
rust/src/map/: biome.rs  chunks.rs  features.rs  generator.rs  loader.rs  mod.rs  noise.rs  types.rs
rust/src/network/: client.rs  messages.rs  mod.rs  server.rs
schema/: generate.sh  messages.fbs
scripts/: cleanup.py  cleanup2.py  identify_tiles.py  tileset_config.yaml
web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/manifests/: audio.json  sprites.json  tileset_dungeon.json
web/src/: config.ts  main.ts
web/src/core/audio/: types.ts
web/src/core/ecs/: components.ts  world.ts
web/src/core/input/: InputManager.ts  InputSystem.ts  index.ts
web/src/core/map/: ChunkManager.ts
web/src/core/network/: MessageHandler.ts  WebSocketClient.ts  messages.ts
web/src/core/rendering/: Camera.ts  RenderSystem.ts  RenderSystemTextured.ts  Renderer.ts  RendererTextured.ts  TilesetManager.ts  index.ts  types.ts
web/src/ui/: styles.css
