[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flatbuffers = "25.9"

# ECS
hecs = "0.10"

# Utilities
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Force compatible versions for Rust 1.81
url = "=2.5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
